# codegraph

./: .gitignore  README.md
rust/: Cargo.toml
rust/src/: config.rs  db.rs  directory.rs  extraction.rs  frameworks.rs  graph.rs  install.rs  lib.rs  main.rs  mcp.rs  query.rs  resolution.rs  search.rs  svelte_vue.rs  ts_extraction.rs  types.rs  watch.rs
rust/ui/: Cargo.toml
rust/ui/src/: app.rs  db.rs  main.rs  mcp_server.rs  theme.rs
rust/ui/src/graph/: canvas.rs  layout.rs  mod.rs  types.rs
rust/ui/src/panels/: detail.rs  mod.rs  sidebar.rs
