[workspace]
members = [".", "ui"]
resolver = "2"

[package]
name = "codegraph-rs"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Rust migration slice for CodeGraph"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
globset = "0.4"
proc-macro2 = { version = "1.0", features = ["span-locations"] }
quote = "1.0"
regex = "1.11"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
syn = { version = "2.0", features = ["full", "visit"] }
thiserror = "2.0"

# Tree-sitter for real parser-backed multi-language extraction
# Using 0.25 which supports grammar ABI versions 13-15 (broadest compatibility)
tree-sitter = "0.25"
tree-sitter-python = "0.25"
tree-sitter-javascript = "0.25"
tree-sitter-typescript = "0.23"
tree-sitter-go = "0.25"
tree-sitter-java = "0.23"
tree-sitter-c = "0.24"
tree-sitter-cpp = "0.23"
tree-sitter-c-sharp = "0.23"
tree-sitter-ruby = "0.23"
tree-sitter-php = "0.24"
tree-sitter-swift = "0.7"
# tree-sitter-kotlin uses tree-sitter 0.20 (ABI incompatible with 0.25); skip for now
tree-sitter-lua = "0.5"
tree-sitter-dart = "0.2"
tree-sitter-scala = "0.26"
